# serenity-discord-bot

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  auto_docker.sh  config.json  docker-compose.infra.yml  docker-compose.yml  tempo-docker.yaml  tempo.yaml
.cargo/: config.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: full.yml  rust-and-docker.yml  rust.yml
.sqlx/: query-04db9cfbf4a5328f91ed8e214e3f044351c2980a376992a14f1f3bc038e3ede9.json  query-04ec323df3837557af532a78a842123ffa16f6e3a4299d5864f306e9496e32d3.json  query-052d24ea007abd910a7b57f9754f8af7850ba23bad26453da00ead34b9900b54.json  query-057a9b66024e20b8dea57479ec892a706224390fa457d9f1740d3741be608e9e.json  query-06d5062612c9cd9d4fe8126309e46d8f86c372f456221e320fc2937b0fc41faa.json  query-0ff5aa75346ee36125af07160e5b7b75d3484d4fc77c82854d85e8156c427556.json  query-1070360f1e94768d2d69848a34301f8f545042ef306240940afa563cce0a5bbe.json  query-19567d1f1bc80f9cf7becb9bf76231e972f62ad95846d0ac0537a80fb3ad8605.json  query-1f0ff420b3bf69bb110edfd1d91bed024835fdf2a165959dd4c0ad06e6671bc9.json  query-20072db160f29c3847153b824a2757f24cc2b5132e3d5d5c079f059490c283aa.json  query-2120110bba3e59e9a0b755ddb8d4a1caff96974b6fbd2939b05183fc745f1bce.json  query-33c5bae9c44ccb0015a577f48475a1a62442f84a8a40f761541161a07a554d53.json  query-3c20efdb2b3656c4f8636cf8d23191cb28692209fe49bbe219f62a1c42476316.json  query-3cd2c8672f9bd61e05caa96fb7e904591859a38dcd748b0f0ebfbf5c8add5485.json  query-3ffa25f7006842e80768c4c13d2fe8cf24fb4a44f82ca19653c82c5efc8cbb1b.json  query-401924fa5b1f484763164decbf71393c2f1779d6d0b110baf71187b8e11fd050.json  query-4a28021d50799dab78a6482b9741349699a0d99889ca3247ea671face7888645.json  query-560e87db16dd6d7d5571e6d66ec33fc4f518d90c886a89c439cad7cb14cc6b6f.json  query-5e7f19738f83be60c400d0c1be18b143fc5843511f467ca8be9b468948ed6383.json  query-62379de09df37126a02f3898ba15fa0eb47bd76e5e9d47ed5fa4d9f3d3d7b156.json  query-66e428ae5ba41ff1063236c08ab89233875900919fb6df88ee3fd3d097cc4a01.json  query-6f81128f1ea90f1e15e99e6891880be6f34f45c440eab05304dde327ec6f8958.json  query-7cde929ca681bb00413dec8c9187c7b31b71ad6aebaa4f5e5696b99980fd7c56.json  query-809ecf7e5b2c1481488b55062c2d81a4900c2c8fb10fafdcd92f581832b19610.json  query-859104bd0e97c87b143e703c48ef8838e2a40daae0a00a206bb2a0b186e82db1.json  query-a8e06fca73f109ef8496fb6a98680a73ea7b39d9e5884db379f5e186d3a5e36a.json  query-b2b43f81bfa2f6612d31ccf24b326df6d2153c67c7603dbc37f6f6c0716e83f9.json  query-bd19fae9ad80471cd92c0c8b61d8db518cceac2decdea1454036cbdabf1d931a.json  query-c6e52b5ac169e66f64ad6cbb00a5781ad3aa5afa8703d1ba8ac4feddca4b78cc.json  query-ca3e34646e1105197a99da2cfd97d9998f8155548ce26ae89195e790d8bc9777.json  query-cf9a572a76e27a60a6d697dd417cc165a294c1c8ed7e3a653e2f63134819bf16.json  query-d765617d320f9eca1ebad4e5e1de5c8795cb6bbb868280909589e5d72305aa3a.json  query-da24f0126ef9f47f8956f620650c724bce30ef37c20998cf1da6eece439f8bf9.json  query-dcfe7db0649da0e4778b3b3b30bc40ecdc62f5437801d736218eed082aa8d925.json  query-f247ff9bd2ca792d63f9a058de7a000f3d3a140bef0f203f9196373ff7b77282.json  query-f284233a8726b66adb6d5db2489d6cda377b1b5775fd09ccf60b66c53eb9d424.json  query-f4c986e5321944ba86004fe3bdc5736942df5db04960f73a99a774ee2199778b.json  query-fb8505b2fa0ae3c8021b897e991b8b4e9556ea834f8350384179fce58824eccd.json
database/: README.md
deploy/supervisor/: serenity-bot.conf
docs/: README.md  ai-review-v0-spec.md  ai.md  architecture.md  configuration.md  custom-reactions.md  deployment.md  download.md  observability.md
extra_utils/: generate_dotenv.rs
extra_utils/generate_dotenv/: Cargo.toml
extra_utils/generate_dotenv/src/: main.rs
grafana/provisioning/datasources/: tempo.yaml
migrations/: 20240304155340_initial_migration.sql  20260607014552_add_ai_channels.sql  20260607190000_add_reminders_table.sql  20260607193000_add_user_timezones.sql  20260610190649_reminders_add_timezone.sql  20260611120000_add_ai_review_guilds.sql  20260613145157_add_custom_reactions.sql  20260614134858_add_guild_ai_settings.sql  20260623120000_drop_ai_review_guilds.sql
scripts/: bg-deploy.sh  coverage.sh  deploy-features.sh  setup-hooks.sh
serenity_discord_bot_derive/: Cargo.toml
serenity_discord_bot_derive/src/: lib.rs
serenity_discord_bot_derive/src/utils/: data.rs  embed_commands.rs  mod.rs  string_manipulation.rs
src/: lib.rs  main.rs  prelude.rs
src/assets/: mod.rs
src/bot_utils/: mod.rs  prefix_command.rs
src/commands/: cmd_utils.rs  embed_commands.rs  general_commands.rs  level_cmds.rs  level_logic.rs  mod.rs  util_commands.rs
src/commands/embed_commands/: avatar.rs  bonk.rs  hug.rs  (+20 more)
src/data/: ai.rs  bot_data.rs  cache.rs  command_data.rs  command_enums.rs  commands.rs  config.rs  custom_reactions.rs  database.rs  database_interactions.rs  embed_media.rs  mod.rs  reminders.rs  user_data.rs  voicelines.rs
src/database/: bot_mentions.rs  level_system.rs  mod.rs
src/enums/: command_enums.rs  emojis.rs  mod.rs  schemas.rs
src/event_handler/: handler.rs  helper_functions.rs  mod.rs
src/extra_threads/: mod.rs  xp_command_cooldown.rs
src/message_commands/: message_create.rs  mod.rs
src/structs/: mod.rs
src/tests/: emojis.rs  mod.rs  urls.rs
src/utils/: concurrency.rs  mod.rs  replies.rs  string_manipulation.rs
(+41 files in other folders)
