[package]
name = "serenity-discord-bot"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"], optional = true }
dotenv = "0.15.0"
poise = "0.6.1"
serenity = "0.12.0"
tokio = { version = "1.36.0", features = ["full"] }
rand = "0.10.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
chrono = "0.4.35"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.13.2", default-features = false }
serenity_discord_bot_derive = { path = "./serenity_discord_bot_derive" }
strsim = "0.11.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = { version = "0.5", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = [
  "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.31", features = [
  "grpc-tonic",
], optional = true }
moka = { version = "0.12.13", features = ["future"] }
dashmap = { version = "6.1.0", optional = true }

[features]
serde = ["dep:serde"]
debug = []
network_test = ["reqwest/default-tls"]
tokio_console = ["console-subscriber", "tokio/tracing"]
opentelemetry = [
  "dep:tracing-opentelemetry",
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
]
# The AI feature requires Serde to Serialize and Deserialize the Ollama API responses.
ai = ["dep:serde", "reqwest/json", "dep:dashmap"]
