[package]
name = "serenity-discord-bot"
version = "0.3.0"
edition = "2024"
rust-version = "1.94"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
dotenv = "0.15.0"
poise = "0.6.1"
serenity = "0.12.0"
tokio = { version = "1.36.0", features = ["full"] }
rand = "0.10.0"
sqlx = { version = "0.9.0", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
] }
chrono = "0.4.35"
chrono-tz = "0.10.4"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.13.2", default-features = false }
serenity_discord_bot_derive = { path = "./serenity_discord_bot_derive" }
tempfile = { version = "3", optional = true }
strsim = "0.11.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
tracing-futures = { version = "0.2", optional = true }
console-subscriber = { version = "0.5", optional = true }
tracing-opentelemetry = { version = "0.33", optional = true }
opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", features = [
  "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.32", features = [
  "grpc-tonic",
], optional = true }
moka = { version = "0.12.13", features = ["future"] }
llm = { version = "1.3.8", default-features = false, features = [
  "rustls-tls",
], optional = true }
redis = { version = "1.2.2", features = [
  "tokio-comp",
  "connection-manager",
], optional = true }
jsonwebtoken = { version = "9", optional = true }

[features]
serde = ["dep:serde"]
debug = []
network_test = ["reqwest/default-tls"]
tokio_console = ["console-subscriber", "tokio/tracing"]
opentelemetry = [
  "dep:tracing-opentelemetry",
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
]
# Standalone Redis store; `ai` builds on it.
redis = ["dep:redis", "dep:serde_json", "serde"]
ai = ["dep:llm", "redis", "dep:tempfile", "dep:jsonwebtoken", "reqwest/rustls", "reqwest/json", "serde", "dep:serde_json"]

# Pick a provider as needed
ai-deepseek  = ["ai", "llm/deepseek"]
ai-ollama    = ["ai", "llm/ollama"]
ai-anthropic = ["ai", "llm/anthropic"]
ai-openai    = ["ai", "llm/openai"]
ai-google    = ["ai", "llm/google"]
ai-groq      = ["ai", "llm/groq"]
